listing instead of searching for base CRUD adapter
