# learnle_site/api/word_api.py
@@ -1,7 +1,7 @@
 from functools import lru_cache
 
 from fastapi import APIRouter, Depends, Query
-from pydantic import BaseModel
+from pydantic import BaseModel, Field, PositiveInt
 
 from learnle_site.application.words import LemmaDatabaseAdapter
 from learnle_site.application.model import Lemma
@@ -24,9 +24,8 @@ async def create_lemma(
 
 
 class ListRequest(BaseModel):
-    search_string: str = ''
-    page_number: int = 1
-    page_size: int = 50
+    page_number: PositiveInt = Field(default=1)
+    page_size: PositiveInt = Field(default=50)
 
 
 @word_api.get('/lemma')
@@ -35,7 +34,6 @@ async def list_lemmas(
     lemma_db: LemmaDatabaseAdapter = Depends(get_lemma_database),
 ) -> list[Lemma]:
     return await words.list_lemmas(
-        list_request.search_string,
         list_request.page_number,
         list_request.page_size,
         lemma_db,
